# msc_simulation

./: .gitignore  CMakeLists.txt  README.md
include/: AttribEditorWidget.h  Cloth.h  ClothParamsWidget.h  CollidersWidget.h  Constraint.h  MainWindow.h  Particle.h  Scene.h  SphereCollider.h  Util.h  Vec3Widget.h  Viewport.h  WindowParams.h
src/: AttribEditorWidget.cpp  Cloth.cpp  ClothParamsWidget.cpp  CollidersWidget.cpp  Constraint.cpp  MainWindow.cpp  Particle.cpp  Scene.cpp  SphereCollider.cpp  Util.cpp  Vec3Widget.cpp  Viewport.cpp  ViewportControls.cpp  main.cpp
